no background image on mobile, contact padding fix

--- a/src/components/BookingForm/BookingForm.module.css
+++ b/src/components/BookingForm/BookingForm.module.css
@@ -33,7 +33,8 @@
 .bookingForm input, select {
     width: 90%;
     margin: 10px auto;
-    padding: 10px
+    padding: 10px;
+    -webkit-appearance: none;
 }
 
 .submitButton {
