--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -8,7 +8,7 @@
 }
 
 form {
-    width: 100%;
+    width: 90%;
     padding: 0;
     margin: 0;
     display: flex;
