--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -84,10 +84,16 @@ a:hover {
     font-weight: 100;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
     .huge-title {
         font-size: 60px;
-        height: 94vh;
+    }
+}
+
+@media only screen and (max-width: 567px) {
+    .huge-title {
+        font-size: 60px;
+        height: 90vh;
     }
 
     .section-2 {
